# PX4-Autopilot

./: .ackrc  .clang-format  .clang-tidy  .cmake-format.py  .cproject  .editorconfig  .envrc  .gitattributes  .github_changelog_generator  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .organizationmap  .pre-commit-config.yaml  .project  .travis.yml  .ycm_extra_conf.py  13010_claire  AGENTS.md  CATAPULT_LAUNCH.md  CHANGELOG.md  CHANGES_SINCE_2249a59.md  CITATION.cff  CLAUDE.MD  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.4.10-pre1  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Dockerfile  Dockerfile.dev  Firmware  Firmware.pro  Firmware.sublime-project  HelloWorld.txt  Jenkinsfile  (+110 more)
EKF/: AlphaFilter.hpp  CMakeLists.txt  EKFGSF_yaw.cpp  EKFGSF_yaw.h  RingBuffer.h  Sensor.hpp  airspeed_fusion.cpp  common.h  control.cpp  covariance.cpp  drag_fusion.cpp  ekf.cpp  ekf.h  ekf_helper.cpp  estimator_base.cpp  estimator_base.h  estimator_interface.cpp  estimator_interface.h  geo.cpp  geo.h  gps_checks.cpp  gps_yaw_fusion.cpp  heading_fusion.cpp  imu_down_sampler.cpp  imu_down_sampler.hpp  mag_control.cpp  mag_fusion.cpp  mathlib.cpp  mathlib.h  optflow_fusion.cpp  range_finder_checks.cpp  sensor_range_finder.cpp  sensor_range_finder.hpp  sideslip_fusion.cpp  terrain_estimator.cpp  utils.cpp  utils.hpp  vel_pos_fusion.cpp
EKF/documentation/: readme.txt
EKF/swig/: ecl.i  ecl_EKF.i
EKF/tests/: CMakeLists.txt
ROMFS/: .gitignore  CMakeLists.txt  Kconfig  Makefile  nsh_romfsimg.h  romfs.img
ROMFS/cannode/: CMakeLists.txt
ROMFS/cannodev1/: CMakeLists.txt
ROMFS/logging/: logconv.m  sdcard_logconverter.m
ROMFS/minimal_romfs/: CMakeLists.txt
ROMFS/mixers/: FMU_AERT.mix  FMU_AET.mix  FMU_Q.mix  FMU_RET.mix  FMU_delta.mix  FMU_multirotor.mix  FMU_pass.mix  FMU_quad+.mix  FMU_quadX.mix  FMU_quad_+.mix  FMU_quad_x.mix  README
ROMFS/performance-test/: CMakeLists.txt
ROMFS/px4fmu_common/: .nshrc  CMakeLists.txt
ROMFS/px4fmu_test/: CMakeLists.txt
ROMFS/robomaster_common/: CMakeLists.txt
ROMFS/scripts/: rc.FMU_quad_x  rc.IO_QUAD  rc.PX4FMU_quad_x  rc.PX4IO  rc.PX4IOAR  rc.hil  rc.logging  rc.sensors  rc.sim  rc.standalone  rc.usb  rcS
ROMFS/sitl/: CMakeLists.txt
ROMFS/tap_common/: CMakeLists.txt
Tools/bench_test/: README.md  boot_health.py  dual_link_forwarding.py  mavftp_log.py  mission_torture.py  param_torture.py  px4bench.py  pyproject.toml  reboot_loop.py  run_bench_suite.py  sih_flight.py  usb_replug.py
Tools/jsbsim_bridge/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
libuavcan/: CMakeLists.txt  cppcheck.sh  include.mk  uncrustify.cfg  uncrustify.sh
libuavcan/dsdl_compiler/: data_type_template.hpp  data_type_template.tmpl  dsdlc.py  libuavcan_dsdlc  setup.py  uavcan_dsdlc
libuavcan/src/: can_driver.cpp  can_io.cpp  data_type.cpp  fatal_error.cpp  global_data_type_registry.cpp  scheduler.cpp  time.cpp  timer.cpp  uc_data_type.cpp  uc_dynamic_memory.cpp  uc_error.cpp
libuavcan/test/: can_driver.cpp  clock.hpp  common.hpp  data_type.cpp  dynamic_memory.cpp  global_data_type_registry.cpp  lazy_constructor.cpp  linked_list.cpp  map.cpp  publisher.cpp  scheduler.cpp  server.cpp  service_client.cpp  service_server.cpp  subscriber.cpp  test_main.cpp  time.cpp  util.cpp
libuavcan/tools/: unpragma_once.pl
libuavcan_drivers/linux/: CMakeLists.txt  cppcheck.sh
mavsdk_tests/: CMakeLists.txt  autopilot_tester.cpp  autopilot_tester.h  test_mission_multicopter.cpp
msg/: AccSpExternal.msg  AckermannVelocitySetpoint.msg  ActionRequest.msg  ActuatorArmed.msg  ActuatorControls.msg  ActuatorControlsStatus.msg  ActuatorEffectivenessMatrix.msg  ActuatorMotors.msg  ActuatorOutputs.msg  ActuatorServos.msg  ActuatorServosTrim.msg  ActuatorTest.msg  AdcReport.msg  Airflow.msg  Airspeed.msg  AirspeedFiltered.msg  AirspeedValidated.msg  AirspeedWind.msg  Am32EepromRead.msg  Am32EepromWrite.msg  ArmingCheckReply.msg  ArmingCheckRequest.msg  AutoTrimStatus.msg  AutogyroTakeoffStatus.msg  AutotuneAttitudeControlStatus.msg  AuxGlobalPosition.msg  BaroThrustEstimate.msg  BatteryFreefly.msg  BatteryInfo.msg  BatteryStatus.msg  BoatSetpoint.msg  Buffer128.msg  ButtonEvent.msg  CMakeLists.txt  CameraCapture.msg  CameraTrigger.msg  CanInterfaceStatus.msg  CellularStatus.msg  CollisionReport.msg  ConfigOverrides.msg  (+742 more)
msg/aux/: ActionRequest.msg  ActuatorArmed.msg  ActuatorOutputs.msg  ActuatorServosTrim.msg  AutotuneAttitudeControlStatus.msg  CameraCapture.msg  CameraStatus.msg  DebugVect.msg  DistanceSensor.msg  EscReport.msg  EstimatorAidSource2d.msg  EstimatorBias.msg  EstimatorStates.msg  FuelTankStatus.msg  GimbalControls.msg  GimbalDeviceAttitudeStatus.msg  (+33 more)
src/: .gitignore  CMakeLists.txt  mainpage.dox
test/: CMakeLists.txt  SensorSimulator.cpp  SensorSimulator.h  attitude.cpp  collision_test.py  copyto.cpp  coverage.cpp  dcm.cpp  dual.cpp  euler.cpp  filter.cpp  gtest.cmake  hatvee.cpp  helper.cpp  instantiation.cpp  integration.cpp  inverse.cpp  least_squares.cpp  main.cpp  matrixAssignment.cpp  matrixMult.cpp  matrixScalarMult.cpp  mavros_mission_vtol_standard.test  mavros_offboard_attctl.test  mavros_offboard_posctl.test  mavros_posix_test_avoidance.test  mavros_posix_test_mission.test  mavros_posix_test_safe_landing.test  mavros_posix_tests_iris_opt_flow.test  mavros_posix_tests_missions.test  mavros_posix_tests_offboard_attctl.test  mavros_posix_tests_offboard_posctl.test  mavros_posix_tests_offboard_rpyrt_ctl.test  module_schema.yaml  pseudoInverse.cpp  quaternion.cpp  ros_test_runner.py  rostest_avoidance_run.sh  rostest_px4_run.sh  setIdentity.cpp  (+37 more)
test_rnd/: CMakeLists.txt  package.xml
unittests/: .gitignore  CMakeLists.txt  Makefile  autodeclination_test.cpp  conversion_test.cpp  debug.h  dsm_test.cpp  eigen_test.cpp  geomag_test.cpp  hrt.cpp  hysteresis_test.cpp  mixer_test.cpp  param_test.cpp  px4_log_stub.cpp  queue.h  run_tests.sh  sample.cc  sample_unittest.cc  sbus2_test.cpp  setup.cpp  sf0x_test.cpp  st24_test.cpp  stubs.cpp  sumd_test.cpp  toby_test.cpp  uorb_stub.cpp
(+39118 files in other folders)
